--- a/CódigoFuente/BitacorasProduccion/Views/ProduccionRegistros/Create.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/ProduccionRegistros/Create.cshtml
@@ -125,7 +125,7 @@
                 </div>
                 <div>
                     <br />
-                    <a href="@Url.Action("Index", ViewBag.ControllerName)" class="btn btn-round btn-info btm-sm" title="Volver">
+                    <a href="@Url.Action("Index", ViewBag.ControllerName,  new { planta=plantaVB.clave, linea=lineaVB.id})" class="btn btn-round btn-info btm-sm" title="Volver">
                         <i class="fa fa-arrow-circle-left"></i> Volver al listado
                     </a>
                 </div>
