2021-10-27 Se configura versión para subir a servidor desarrollo

--- a/CódigoFuente/BitacorasProduccion/Views/ProduccionRegistros/Index.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/ProduccionRegistros/Index.cshtml
@@ -38,12 +38,12 @@
 
     <style>
         .fondo_rojo > td {
-            background-color: #fc5c5c;
+            background-color: #ff0000;
             color: #fffdf0;
             font-weight: bolder;
         }
         .fondo_temporal > td {
-            background-color: #ff6a00;
+            background-color: #ff8909;
             color: #fffdf0;
             font-weight: bolder;
         }
@@ -193,7 +193,7 @@
                                                                 </td>
 
                                                                 <td>
-                                                                    <a href="@Url.Action("Edit", ViewBag.ControllerName, new { id = item.id})" class="btn btn-secondary btm-sm" title="Editar">
+                                                                    <a href="@Url.Action("Edit", ViewBag.ControllerName, new { id = item.id})" class="btn btn-secondary btm-sm" title="Configuración">
                                                                         <i class="fa fa-gears"></i>
                                                                     </a>
                                                                     <a href="@Url.Action("DatosEntradas", ViewBag.ControllerName, new { id = item.id})" class="btn btn-success btm-sm" title="Editar">
